--- a/pass-it-around/package.json
+++ b/pass-it-around/package.json
@@ -2,7 +2,7 @@
   "name": "pass-it-around",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server2.js",
   "scripts": {
     "start": "node server2.js",
     "dev2": "node --watch server2.js"
@@ -14,3 +14,4 @@
     "express": "^4.18.2"
   }
 }
+
